Correct '.wrap' side padding.

--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ p {
 	margin: 0 auto;
 	max-width: 1220px;
 	text-align: center;
-	padding: 25px 0;
+	padding: 0 25px;
 }
 
 #section1 {
